--- a/ofsen/Views/Hesaplar/GirişYap.cshtml
+++ b/ofsen/Views/Hesaplar/GirişYap.cshtml
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-md-4 offset-md-4" style="border:solid rgb(111,111,111) 2px; border-radius:5px; padding:1em ">
             <form asp-action="GirişYap" autocomplete="off">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div id="validationsum" asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="username" class="control-label"></label>
                     <input asp-for="username" class="form-control" />
@@ -41,3 +41,20 @@
         <a asp-action="ÜyeOl" asp-controller="Hesaplar" class="btn form-control btn-outline-dark">Şimdi Üye Olun</a>
     </div>
 </div>
+
+<script>
+    $(document).ready(function () { 
+        if ($("#validationsum").html().search("EmailConfirmationNeeded") >= 0) {
+
+            $("#validationsum").html($(".bekleyiniz").html());
+
+            new OzAjax("/Hesaplar/EpostaOnayGerekli", GET, { thatusername: $("#username").val() }, epostaDogrulaBasari).BasitGonder();
+            function epostaDogrulaBasari(data) {
+                $("#validationsum").html(data);
+            }
+        }
+    });
+
+        
+    
+</script>
