--- a/ofsen/Views/_ViewImports.cshtml
+++ b/ofsen/Views/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using ofsen.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Microsoft.AspNetCore.Identity;
-@inject SignInManager<IdentityUser> signInManager;
+@inject SignInManager<AppUsers> signInManager;
