--- a/ofsen/Views/Hesaplar/EmailConfirmationPage.cshtml
+++ b/ofsen/Views/Hesaplar/EmailConfirmationPage.cshtml
@@ -1,7 +1,7 @@
-﻿
+﻿@model ofsen.ViewModels.FreeTokenModel
+
 @{
     Layout = null;
-    var confirmationLink = (string)ViewBag.confirmationLink;
 }
 
 <!DOCTYPE html>
@@ -24,19 +24,20 @@
         <br />
         <h5>Veya aşağıdaki kodu internet tarayıcınızın adres bölümüne yapıştırıp enter'layınız.</h5>
         <br />
-        <h5>@confirmationLink</h5>
+        <h5>@Model.confirmationLink</h5>
         <br />
         <h5>İyigünler</h5>
     </div>
-    
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <script>
         function dogrula() {
-            window.open('@confirmationLink');
+            window.open('@Model.confirmationLink');
         }
     </script>
 </body>
 </html>
+
