--- a/ofsen/wwwroot/css/SiteAdmin.css
+++ b/ofsen/wwwroot/css/SiteAdmin.css
@@ -5,7 +5,7 @@
 body {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 1.625;
     color: #666;
     text-rendering: optimizeLegibility !important;
@@ -101,6 +101,10 @@ input[type=checkbox] {
     align-items: center;
     padding: 0.75rem 1.25rem;
 }
+.menuCollapsedPart{
+
+    transition:.5s;
+}
 
 .card-header {
     padding: 0 !important;
@@ -133,4 +137,9 @@ input[type=checkbox] {
 .icerik {
     flex: 1;    
     padding:2em;
+}
+
+input[type=checkbox] {
+    transform: scale(1);
+    width: 1em !important;
 }
